public/v/release-4.4/_sources/concepts/stereo_depth/sgm/tutorial_isaac_sim.rst.txt
Tutorial with Isaac Sim
=======================

.. figure:: :ir_lfs:`<resources/isaac_ros_docs/concepts/stereo_depth/sgm/isaac_sim_image_pipeline.png>`
    :align: center
    :width: 600px

Overview
------------

This tutorial demonstrates how to perform depth-camera based
reconstruction using the ``disparity_node`` and stereo image pairs
streamed from Isaac Sim.

Tutorial Walkthrough
--------------------

1. Complete the ``isaac_ros_stereo_image_proc`` :ref:`quickstart <repositories_and_packages/isaac_ros_image_pipeline/isaac_ros_stereo_image_proc/index:quickstart>`.

2. Install and launch Isaac Sim following the steps in the :ref:`Isaac ROS Isaac Sim Setup Guide <gs_isaac_sim>`.

3. Activate the Isaac ROS environment and install ``rviz2``:

   .. code:: bash

      isaac-ros activate

   .. code:: bash

      sudo apt-get install -y ros-:ir_ros_distro:-rviz2

   Source the setup file.

   .. code:: bash

      source /opt/ros/:ir_ros_distro:/setup.bash

4. Press **Play** to start publishing data from the Isaac Sim.

   .. figure:: :ir_lfs:`<resources/isaac_ros_docs/getting_started/isaac_sim_sample_scene.png>`
        :align: center
        :width: 600px

5. In a separate terminal, start the ``isaac_ros_stereo_image_proc``
   graph using the launch files:

   .. code:: bash

      ros2 launch isaac_ros_stereo_image_proc isaac_ros_stereo_image_pipeline_isaac_sim.launch.py

   You should see a RViz window, as shown below:

   .. figure:: :ir_lfs:`<resources/isaac_ros_docs/concepts/stereo_depth/sgm/isaac_sim_image_pipeline.png>`
      :align: center
      :width: 600px
